// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flood fill Sample input 1`] = `
Array [
  306,
  234,
]
`;

exports[`Flood fill Sample input 2`] = `
"┌╴
  ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ╔═╗ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
  ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ║ ║ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
  ⋅ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ║ ║ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
  ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ║ ▼ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
  ◆ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ╔═╝ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
  ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ╚═╗ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
  ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ║ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
  ⋅ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ║ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
  ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ 1 ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ║ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
  ◆ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ╚═════════════════════╗ ║ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
  ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ┏━━━━━━━━━━━━━━━━━┓ ╚═╝ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
  ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ┃ ┏━━━━━━━━━━━━━━━┛ ◇ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
  ⋅ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ 0 ┃ ⋅ ⋅ ⋅ ◆ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
  ⋅ ◄━━━━━━━━━━━━━━━┛ ⋅ ⋅ ⋅ ⋅ ◆ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
  ⋅ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ◇ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
  ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
  ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
  ◆ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
  ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
  ⋅ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ◇ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
                                                             ╶┘
62/600"
`;

exports[`Flood fill Sample input 2 1`] = `
Array [
  297,
  241,
]
`;

exports[`Flood fill Sample input 2 2`] = `
"┌╴
  ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ╔═╗ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
  ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ║ ║ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
  ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ║ ║ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
  ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ║ ║ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
  ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ╔═╝ ▼ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
  ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ╚═╗ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
  ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ║ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
  ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ║ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
  ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ 1 ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ║ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
  ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ╚═════════════════════╗ ║ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
  ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ┏━━━━━━━━━━━━━━━━━┓ ╚═╝ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
  ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ┃ ┏━━━━━━━━━━━━━━━┛ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
  ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ 0 ┃ ⋅ ⋅ ◆ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
  ◄━━━━━━━━━━━━━━━━━┛ ⋅ ⋅ ⋅ ◆ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
  ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
  ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
  ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
  ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
  ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
  ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
                                                             ╶┘
64/600"
`;

exports[`Flood fill Sample input 3 1`] = `
Array [
  199,
  337,
]
`;

exports[`Flood fill Sample input 3 2`] = `
"┌╴
  ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ╔═╗ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
  ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ║ ║ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
  ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ║ ║ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
  ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ║ ║ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
  ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ╔═╝ ╚═► ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
  ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ╚═╗ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
  ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ║ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
  ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ║ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
  ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ 1 ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ║ ◇ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
  ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ╚═════════════════════╗ ║ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
  ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ⋅ ┏━━━━━━━━━━━━━━━━━┓ ╚═╝ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
  ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ ⋅ ┃ ┏━━━━━━━━━━━━━━━┛ ◇ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
  ▲ ⋅ ⋅ ⋅ ⋅ ◆ ⋅ ⋅ 0 ┃ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
  ┗━━━━━━━━━━━━━━━━━┛ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
  ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
  ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅
  ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇
  ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅
  ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅
  ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅ ⋅ ◇ ⋅ ⋅ ⋅
                                                             ╶┘
66/600"
`;

exports[`Game Sample input 1`] = `
"┌╴
  ┏━━━━━━━┓ ◄═══════════════════════════════════════════════╗
  ┃       ┗━━━━━━━━━━━0   ┏━━━━━━━━━━━►                     ║
  ┗━━━━━━━━━━━━━━━━━━━━━━━┛                                 ║
                                                            ║
                                                            ║
                                                            ║
                                                            ║
                                                            ║
                                                            ║
                                                            1
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             ╶┘
67/600"
`;

exports[`Game Start position when my index is 0 1`] = `
"┌╴
                                                             
                      1                                      
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                            0
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             ╶┘
2/600"
`;

exports[`Game Start position when my index is 1 1`] = `
"┌╴
                                                             
                      0                                      
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                            ▲
                                                            1
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             ╶┘
3/600"
`;

exports[`Game Start position when my index is 2 1`] = `
"┌╴
                                                             
                      2─►                                    
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                            ▲
                                                            1
                                                             
                                                             
                                  0                          
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             
                                                             ╶┘
5/600"
`;

exports[`Iterator Single player 1`] = `
"┌╴
  0━━━━━┓
  ┏━━━┓ ┃
  ┃ ◄━┛ ┃
  ┗━━━━━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 2`] = `
"┌╴
  0━━━━━┓
  ┏━┓ ▲ ┃
  ┃ ┗━┛ ┃
  ┗━━━━━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 3`] = `
"┌╴
  0━━━━━┓
  ◄━━━┓ ┃
  ┏━━━┛ ┃
  ┗━━━━━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 4`] = `
"┌╴
  0━━━━━┓
  ┏━━━┓ ┃
  ┃ ▲ ┃ ┃
  ┗━┛ ┗━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 5`] = `
"┌╴
  0━━━━━┓
  ┏━━━┓ ┃
  ┗━┓ ┃ ┃
  ◄━┛ ┗━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 6`] = `
"┌╴
  0━━━━━┓
  ▲ ┏━┓ ┃
  ┃ ┃ ┃ ┃
  ┗━┛ ┗━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 7`] = `
"┌╴
  0━━━━━┓
  ┏━━━━━┛
  ┃ ◄━━━┓
  ┗━━━━━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 8`] = `
"┌╴
  0━━━━━┓
  ┏━━━━━┛
  ┃ ┏━━━┓
  ┗━┛ ◄━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 9`] = `
"┌╴
  0━━━━━┓
  ┏━━━━━┛
  ┃ ┏━┓ ▲
  ┗━┛ ┗━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 10`] = `
"┌╴
  0━━━━━┓
  ┏━━━━━┛
  ┗━━━━━┓
  ◄━━━━━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 11`] = `
"┌╴
  0 ┏━━━┓
  ┃ ┃ ▲ ┃
  ┃ ┗━┛ ┃
  ┗━━━━━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 12`] = `
"┌╴
  0 ┏━━━┓
  ┃ ┗━┓ ┃
  ┃ ◄━┛ ┃
  ┗━━━━━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 13`] = `
"┌╴
  0 ▲ ┏━┓
  ┃ ┃ ┃ ┃
  ┃ ┗━┛ ┃
  ┗━━━━━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 14`] = `
"┌╴
  0 ┏━━━┓
  ┃ ┃ ◄━┛
  ┃ ┗━━━┓
  ┗━━━━━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 15`] = `
"┌╴
  0 ┏━┓ ▲
  ┃ ┃ ┗━┛
  ┃ ┗━━━┓
  ┗━━━━━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 16`] = `
"┌╴
  0 ◄━━━┓
  ┃ ┏━━━┛
  ┃ ┗━━━┓
  ┗━━━━━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 17`] = `
"┌╴
  0 ┏━━━┓
  ┃ ┃ ▲ ┃
  ┃ ┃ ┃ ┃
  ┗━┛ ┗━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 18`] = `
"┌╴
  0 ┏━━━┓
  ┃ ┃ ┏━┛
  ┃ ┃ ┃ ▲
  ┗━┛ ┗━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 19`] = `
"┌╴
  0 ┏━━━┓
  ┃ ┃ ┏━┛
  ┃ ┃ ┗━┓
  ┗━┛ ◄━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 20`] = `
"┌╴
  0 ┏━┓ ▲
  ┃ ┃ ┃ ┃
  ┃ ┃ ┃ ┃
  ┗━┛ ┗━┛
         ╶┘
16/16"
`;

exports[`Iterator Single player 21`] = `
"┌╴
  0     ◆
         
         
         
         ╶┘
1/16"
`;

exports[`Iterator Two players 1`] = `0`;

exports[`Iterator Two players 2`] = `
"┌╴
  ⋅ ⋅ ⋅ ⋅
  ╔═════►
  ║ ⋅ ⋅ ⋅
  ╚═════1
         ╶┘
9/16"
`;

exports[`Iterator Two players 3`] = `0`;

exports[`Iterator Two players 4`] = `
"┌╴
  ⋅ ⋅ ▲ ⋅
  ╔═══╝ ⋅
  ║ ◇ ⋅ ⋅
  ╚═════1
         ╶┘
9/16"
`;

exports[`Iterator Two players 5`] = `0`;

exports[`Iterator Two players 6`] = `
"┌╴
  ⋅ ◇ ⋅ ⋅
  ╔═══╗ ⋅
  ║ ⋅ ▼ ⋅
  ╚═════1
         ╶┘
9/16"
`;

exports[`Iterator Two players 7`] = `0`;

exports[`Iterator Two players 8`] = `
"┌╴
  ⋅ ⋅ ⋅ ⋅
  ╔═╗ ⋅ ⋅
  ║ ╚═► ⋅
  ╚═════1
         ╶┘
9/16"
`;

exports[`Iterator Two players 9`] = `0`;

exports[`Iterator Two players 10`] = `
"┌╴
  ▲ ⋅ ⋅ ⋅
  ╚═╗ ⋅ ⋅
  ╔═╝ ⋅ ◇
  ╚═════1
         ╶┘
9/16"
`;

exports[`Iterator Two players 11`] = `1`;

exports[`Iterator Two players 12`] = `
"┌╴
  0━━━━━┓
  ⋅ ◄━━━┛
  ⋅ ⋅ ⋅ ⋅
  ⋅ ⋅ ⋅ ⋅
         ╶┘
7/16"
`;

exports[`Iterator Two players 13`] = `1`;

exports[`Iterator Two players 14`] = `
"┌╴
  0━━━━━┓
  ⋅ ⋅ ┏━┛
  ⋅ ◄━┛ ⋅
  ⋅ ⋅ ⋅ ⋅
         ╶┘
8/16"
`;

exports[`Iterator Two players 15`] = `0`;

exports[`Iterator Two players 16`] = `
"┌╴
  ⋅ ⋅ ⋅ ⋅
  ╔═╗ ⋅ ⋅
  ║ ╚═► ⋅
  ╚═════1
         ╶┘
9/16"
`;

exports[`Iterator Two players 17`] = `0`;

exports[`Iterator Two players 18`] = `
"┌╴
  ⋅ ⋅ ⋅ ⋅
  ⋅ ⋅ ⋅ ▲
  ╔═════╝
  ╚═════1
         ╶┘
9/16"
`;

exports[`Iterator Two players 19`] = `0`;

exports[`Iterator Two players 20`] = `
"┌╴
  ▲ ⋅ ⋅ ⋅
  ╚═╗ ⋅ ⋅
  ╔═╝ ⋅ ◇
  ╚═════1
         ╶┘
9/16"
`;

exports[`Iterator Two players 21`] = `0`;

exports[`Iterator Two players 22`] = `
"┌╴
  ⋅ ⋅ ⋅ ⋅
  ⋅ ◄═══╗
  ⋅ ⋅ ⋅ ║
  ⋅ ⋅ ⋅ 1
         ╶┘
5/16"
`;

exports[`Iterator Two players 23`] = `0`;

exports[`Iterator Two players 24`] = `
"┌╴
  ⋅ ⋅ ▲ ⋅
  ⋅ ⋅ ╚═╗
  ⋅ ⋅ ⋅ ║
  ◇ ⋅ ◇ 1
         ╶┘
5/16"
`;

exports[`Iterator Two players 25`] = `0`;

exports[`Iterator Two players 26`] = `
"┌╴
  ⋅ ⋅ ⋅ ◇
  ⋅ ⋅ ╔═╗
  ⋅ ⋅ ▼ ║
  ⋅ ⋅ ⋅ 1
         ╶┘
5/16"
`;

exports[`Iterator Two players 27`] = `1`;

exports[`Iterator Two players 28`] = `
"┌╴
  0━━━┓ ⋅
  ⋅ ⋅ ┃ ⋅
  ⋅ ⋅ ▼ ⋅
  ⋅ ⋅ ⋅ ⋅
         ╶┘
5/16"
`;

exports[`Iterator Two players 29`] = `1`;

exports[`Iterator Two players 30`] = `
"┌╴
  0━━━┓ ◆
  ⋅ ◄━┛ ⋅
  ⋅ ⋅ ⋅ ⋅
  ⋅ ⋅ ⋅ ⋅
         ╶┘
5/16"
`;

exports[`Iterator Two players 31`] = `0`;

exports[`Iterator Two players 32`] = `
"┌╴
  ⋅ ⋅ ⋅ ⋅
  ⋅ ▲ ⋅ ⋅
  ⋅ ║ ⋅ ⋅
  ⋅ ╚═══1
         ╶┘
5/16"
`;

exports[`Iterator Two players 33`] = `0`;

exports[`Iterator Two players 34`] = `
"┌╴
  ⋅ ⋅ ⋅ ◇
  ⋅ ⋅ ⋅ ⋅
  ◄═╗ ⋅ ◇
  ⋅ ╚═══1
         ╶┘
5/16"
`;

exports[`Iterator Two players 35`] = `0`;

exports[`Iterator Two players 36`] = `
"┌╴
  ⋅ ⋅ ⋅ ⋅
  ⋅ ⋅ ⋅ ⋅
  ⋅ ╔═► ⋅
  ◇ ╚═══1
         ╶┘
5/16"
`;

exports[`Iterator Two players 37`] = `1`;

exports[`Iterator Two players 38`] = `
"┌╴
  0 ⋅ ⋅ ⋅
  ┃ ⋅ ⋅ ⋅
  ┗━━━► ⋅
  ⋅ ⋅ ⋅ ⋅
         ╶┘
5/16"
`;

exports[`Iterator Two players 39`] = `1`;

exports[`Iterator Two players 40`] = `
"┌╴
  0 ⋅ ⋅ ⋅
  ┃ ▲ ⋅ ⋅
  ┗━┛ ⋅ ⋅
  ◆ ⋅ ⋅ ⋅
         ╶┘
5/16"
`;

exports[`Iterator Two players 41`] = `0`;

exports[`Iterator Two players 42`] = `
"┌╴
  ⋅ ╔═══╗
  ⋅ ║ ⋅ ║
  ⋅ ║ ⋅ ║
  ⋅ ▼ ⋅ 1
         ╶┘
9/16"
`;

exports[`Iterator Two players 43`] = `0`;

exports[`Iterator Two players 44`] = `
"┌╴
  ⋅ ╔═══╗
  ⋅ ║ ◇ ║
  ◄═╝ ⋅ ║
  ⋅ ⋅ ⋅ 1
         ╶┘
9/16"
`;

exports[`Iterator Two players 45`] = `0`;

exports[`Iterator Two players 46`] = `
"┌╴
  ⋅ ╔═══╗
  ◇ ║ ⋅ ║
  ⋅ ╚═► ║
  ⋅ ⋅ ⋅ 1
         ╶┘
9/16"
`;

exports[`Iterator Two players 47`] = `0`;

exports[`Iterator Two players 48`] = `
"┌╴
  ⋅ ╔═══╗
  ⋅ ╚═╗ ║
  ⋅ ⋅ ▼ ║
  ⋅ ⋅ ⋅ 1
         ╶┘
9/16"
`;

exports[`Iterator Two players 49`] = `0`;

exports[`Iterator Two players 50`] = `
"┌╴
  ◄═╗ ╔═╗
  ⋅ ╚═╝ ║
  ⋅ ⋅ ⋅ ║
  ⋅ ⋅ ◇ 1
         ╶┘
9/16"
`;

exports[`Iterator Two players 51`] = `1`;

exports[`Iterator Two players 52`] = `
"┌╴
  0 ⋅ ⋅ ⋅
  ┃ ▲ ⋅ ⋅
  ┃ ┃ ⋅ ⋅
  ┗━┛ ⋅ ⋅
         ╶┘
7/16"
`;

exports[`Iterator Two players 53`] = `1`;

exports[`Iterator Two players 54`] = `
"┌╴
  0 ⋅ ⋅ ⋅
  ┃ ⋅ ▲ ⋅
  ┃ ┏━┛ ⋅
  ┗━┛ ⋅ ⋅
         ╶┘
8/16"
`;

exports[`Iterator Two players 55`] = `0`;

exports[`Iterator Two players 56`] = `
"┌╴
  ⋅ ╔═══╗
  ⋅ ╚═╗ ║
  ⋅ ⋅ ▼ ║
  ⋅ ⋅ ⋅ 1
         ╶┘
9/16"
`;

exports[`Iterator Two players 57`] = `0`;

exports[`Iterator Two players 58`] = `
"┌╴
  ⋅ ⋅ ╔═╗
  ⋅ ⋅ ║ ║
  ⋅ ⋅ ║ ║
  ⋅ ◄═╝ 1
         ╶┘
9/16"
`;

exports[`Iterator Two players 59`] = `0`;

exports[`Iterator Two players 60`] = `
"┌╴
  ◄═╗ ╔═╗
  ⋅ ╚═╝ ║
  ⋅ ⋅ ⋅ ║
  ⋅ ⋅ ◇ 1
         ╶┘
9/16"
`;

exports[`Iterator Two players 61`] = `
"┌╴
  0      
  ⋅      
  ⋅ ⋅ ⋅  
  ⋅ ⋅ ◇ 1
         ╶┘
2/16"
`;

exports[`Iterator Two players 62`] = `
"← –
→ 0.2667
↑ –
↓ 0.2667"
`;

exports[`Iterator Two players 63`] = `
"← NaN
→ NaN
↑ NaN
↓ NaN"
`;
